--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,12 @@
-.terraform*
-terraform*
-*.tfplan
+./.terraform*
+./terraform*
+./*.tfplan
 *.auto.tfvars
-*.tfstate
+./*.tfstate
 *.bak
 
 tmp/
 
 output
-
-*.tfstate
 
 **/.DS_Store
